--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,17 @@
             <version>2.6.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.vk.api</groupId>
+            <artifactId>sdk</artifactId>
+            <version>1.0.14</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-jdk14</artifactId>-->
+<!--            <version>1.7.36</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 </project>
