--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,13 @@
             <version>1.0.14</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.5.1.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 </project>
